Fixed card-title overflowing issue

--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -9,7 +9,7 @@
 .card {
   display: grid;
   background-color: white;
-  grid-template: 2.85rem 1.15rem 1fr / 1fr;
+  grid-template: auto 1.15rem 1fr / 1fr;
   width: 50%;
   margin: 1.5rem 0;
   padding: 1rem;
@@ -102,6 +102,7 @@
   font-weight: bold;
   color: #374457;
   font-size: 2rem;
+  line-height: normal;
 }
 .card-header-language {
   display: inline-flex;
